WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
58377
Assertion in DrawingAreaImpl::resumePainting() (m_isPaintingSuspended) when clicking a link at twitter.com
https://bugs.webkit.org/show_bug.cgi?id=58377
Summary
Assertion in DrawingAreaImpl::resumePainting() (m_isPaintingSuspended) when c...
Anders Carlsson
Reported
2011-04-12 14:32:30 PDT
Assertion in DrawingAreaImpl::resumePainting() (m_isPaintingSuspended) when clicking a link at twitter.com
Attachments
Patch
(1.41 KB, patch)
2011-04-12 14:33 PDT
,
Anders Carlsson
no flags
Details
Formatted Diff
Diff
Patch
(1.47 KB, patch)
2011-04-12 14:34 PDT
,
Anders Carlsson
aroben
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2011-04-12 14:33:27 PDT
Created
attachment 89274
[details]
Patch
Anders Carlsson
Comment 2
2011-04-12 14:34:24 PDT
Created
attachment 89275
[details]
Patch
Anders Carlsson
Comment 3
2011-04-12 15:05:40 PDT
Committed
r83647
: <
http://trac.webkit.org/changeset/83647
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug