2011-04-12  Anders Carlsson  <andersca@apple.com>

Reviewed by Adam Roben.

        Assertion in DrawingAreaImpl::resumePainting() (m_isPaintingSuspended) when clicking a link at twitter.com
        https://bugs.webkit.org/show_bug.cgi?id=58377
        <rdar://problem/8976531>

        Remove the assertion.

        * WebProcess/WebPage/DrawingAreaImpl.cpp:
        (WebKit::DrawingAreaImpl::resumePainting):


Canonical link: https://commits.webkit.org/73407@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@83647 268f45cc-cd09-0410-ab3c-d52691b4dbfc